--- a/templates/bundle_test.html
+++ b/templates/bundle_test.html
@@ -3,7 +3,7 @@
 <style>
 
 .node { /* styling for node labels */
-  font: 300 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 8px "Helvetica Neue", Helvetica, Arial, sans-serif;
   fill: #aaa;
 }
 
@@ -14,6 +14,7 @@
 .link { /* connecting lines */
   stroke: steelblue;
   stroke-opacity: .9;
+  stroke-width: .5px;
   fill: none; /* color between lines? No. Never do this. */
   pointer-events: hover;
 }
@@ -29,153 +30,30 @@
   font-weight: 700;
 }
 
-.node--source { /* make source red */
+.node--source { /* make source green */
   fill: #2ca02c;
 }
 
-.node--target { /* make target green */
+.node--target { /* make target red */
   fill: #d62728;
 }
 
 .link--source,
-.link--target { /*  */
+.link--target { /* links when node is hovered over */
   stroke-opacity: 1;
   stroke-width: 2px;
 }
 
-.link--source { /*  */
+.link--source { /* turn link in which node is a source red */
   stroke: #d62728;
 }
 
-.link--target {
+.link--target { /* turn link in which node is a target red */
   stroke: #2ca02c;
 }
 
 </style>
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
-<script>
-
-var diameter = 960,
-    radius = diameter / 2,
-    innerRadius = radius - 120;
-
-var cluster = d3.layout.cluster()
-    .size([360, innerRadius])
-    .sort(null)
-    .value(function(d) { return d.size; });
-
-var bundle = d3.layout.bundle();
-
-var line = d3.svg.line.radial()
-    .interpolate("bundle")
-    .tension(.85)
-    .radius(function(d) { return d.y; })
-    .angle(function(d) { return d.x / 180 * Math.PI; });
-
-var svg = d3.select("body").append("svg")
-    .attr("width", diameter)
-    .attr("height", diameter)
-  .append("g")
-    .attr("transform", "translate(" + radius + "," + radius + ")");
-
-var link = svg.append("g").selectAll(".link"),
-    node = svg.append("g").selectAll(".node");
-
-d3.json("/data.json", function(error, data) {
-  if (error) throw error;
-
-  var nodes = cluster.nodes(packageHierarchy(data.data)),
-      links = packageImports(nodes);
-
-  link = link
-      .data(bundle(links))
-    .enter().append("path")
-      .each(function(d) { d.source = d[0], d.target = d[d.length - 1]; })
-      .attr("class", "link")
-      .attr("d", line);
-
-  node = node
-      .data(nodes.filter(function(n) { return !n.children; }))
-    .enter().append("text")
-      .attr("class", "node")
-      .attr("dy", ".31em")
-      .attr("transform", function(d) { return "rotate(" + (d.x - 90) + ")translate(" + (d.y + 8) + ",0)" + (d.x < 180 ? "" : "rotate(180)"); })
-      .style("text-anchor", function(d) { return d.x < 180 ? "start" : "end"; })
-      .text(function(d) { return d.key; })
-      .on("mouseover", mouseovered)
-      .on("mouseout", mouseouted);
-});
-
-function mouseovered(d) {
-  node
-      .each(function(n) { n.target = n.source = false; });
-
-  link
-      .classed("link--target", function(l) { if (l.target === d) return l.source.source = true; })
-      .classed("link--source", function(l) { if (l.source === d) return l.target.target = true; })
-    .filter(function(l) { return l.target === d || l.source === d; })
-      .each(function() { this.parentNode.appendChild(this); });
-
-  node
-      .classed("node--target", function(n) { return n.target; })
-      .classed("node--source", function(n) { return n.source; });
-}
-
-function mouseouted(d) {
-  link
-      .classed("link--target", false)
-      .classed("link--source", false);
-
-  node
-      .classed("node--target", false)
-      .classed("node--source", false);
-}
-
-d3.select(self.frameElement).style("height", diameter + "px");
-
-// Lazily construct the package hierarchy from class names.
-function packageHierarchy(classes) {
-  var map = {};
-
-  function find(name, data) {
-    var node = map[name], i;
-    if (!node) {
-      node = map[name] = data || {name: name, children: []};
-      if (name.length) {
-        node.parent = find(name.substring(0, i = name.lastIndexOf(".")));
-        node.parent.children.push(node);
-        node.key = name.substring(i + 1);
-      }
-    }
-    return node;
-  }
-
-  classes.forEach(function(d) {
-    find(d.name, d);
-  });
-
-  return map[""];
-}
-
-// Return a list of imports for the given array of nodes.
-function packageImports(nodes) {
-  var map = {},
-      imports = [];
-
-  // Compute a map from name to node.
-  nodes.forEach(function(d) {
-    map[d.name] = d;
-  });
-
-  // For each import, construct a link from the source to target node.
-  nodes.forEach(function(d) {
-    if (d.imports) d.imports.forEach(function(i) {
-      imports.push({source: map[d.name], target: map[i]});
-    });
-  });
-
-  return imports;
-}
-
-</script>
+<script src="static/js/BundleChart.js"></script>
+</body>
