--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hamildata</title>
+  <link rel="stylesheet" type="text/css" href="static/css/bundle_chart.css">
 </head>
 
 <body>
