--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <title>Hamildata</title>
   <link rel="stylesheet" type="text/css" href="static/css/bundle_chart.css">
+  <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 
 <body>
