--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,12 @@
 
     <h1>Hamilton Data</h1>
 
+<script src='https://code.jquery.com/jquery.js'></script>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="static/js/BundleChart.js"></script>
+
+<div id="info-box"></div>
+
+<script src="static/js/InfoBox.js"></script>
 
 {% endblock %}
