--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,13 @@
 svg {
-    width = 50px;
+    display: block;
+    margin: 0px;
+}
+
+#info-box {
+    width: 100%;
+    height: 150px;
+    margin: 10px;
+    padding-left: 10px;
+    padding-top: 5px;
+    background-color: beige;
 }
