--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Hamildata</title>
+  <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="static/css/bundle_chart.css">
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
