broke out songs into separate divs for comparison display; laid framework for song comparison route; TODO: rewrite comp_lines in comparisons.py, display returned dictionary in info box

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,10 +9,21 @@ svg {
     margin: 10px;
     padding-left: 10px;
     padding-top: 5px;
+    overflow: hidden;
     background-color: beige;
 }
 
 .song-title {  /* FIXME: doesn't work; find out why */
     font-family: serif;
     color: red;
+}
+
+#song--table{
+    width: 50%;
+    float:left;
+    overflow: hidden;
+}
+
+td {
+    font-size: .8em;
 }
