--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hamildata</title>
+  <link rel="shortcut icon" href="static/img/favicon.ico">
   <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="static/css/bundle_chart.css">
