updated styling on divs within info box

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,8 +13,9 @@ svg {
     background-color: beige;
 }
 
-div .contaner {
-    margin-bottom: 15px;
+.match {
+    padding: 0;
+    padding-bottom: 15px;
 }
 
 .one-song {
