--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@ svg {
 
 #info-box {
     width: 100%;
-    height: 500px;
+    height: auto;
     margin: 10px;
     padding-left: 10px;
     padding-top: 5px;
@@ -21,6 +21,7 @@ svg {
 .one-song {
     float: left;
     width: 50%;
+    padding-right: 10px;
 }
 
 
