added background color

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,3 +45,12 @@ td.char{
     vertical-align: top;
 }
 
+body {
+    background-color: #fff9e6;
+   /* background-size: 100% auto;
+    background-image: url("../img/LetterToOtis.jpg");
+    background-position: left top;*/
+}
+
+
+
