began work on jasmine tests

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,5 +9,14 @@
 
 <div id="info-box"></div>
 
+{% if g.jasmine_tests %}
+    <!-- stuff for testing -->
+    <link rel="stylesheet" href="/static/css/jasmine.min.css">
+    <script src="/static/js/jasmine.min.js"></script>
+    <script src="/static/js/jasmine-html.min.js"></script>
+    <script src="/static/js/boot.min.js"></script>
+    <script src="/static/js/BundleChartSpec.js"></script>
+    <!-- end of stuff for testing -->
+{% endif %}
 
 {% endblock %}
