began bar chart route implementation

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="static/css/bundle_chart.css">
+  <link rel="stylesheet" type="text/css" href="static/css/bar_chart.css">
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 
