--- a/templates/search_lyrics.html
+++ b/templates/search_lyrics.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
+
+
 {% block content %}
 
     <h1>Hamilton Data</h1>
 
-<script src='https://code.jquery.com/jquery.js'></script>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script src="static/js/BundleChart.js"></script>
+<script src="/static/js/jquery-1.12.4.js"></script>
+<script src="/static/js/d3.v3.min.js"></script>
+<script src="/static/js/BarChart.js"></script>
 
-<div id="info-box"></div>
+<div id="info-box">
+<form ></form>
+
+
+</div>
 
 
 {% endblock %}
