basic cleanup, edited bundlechart code to match barchart code

--- a/static/css/bundle_chart.css
+++ b/static/css/bundle_chart.css
@@ -62,6 +62,13 @@
   stroke: brown;
 }
 
+.link-song12-source,
+.link-song12-target { /* links when node is hovered over */
+  stroke-opacity: 1;
+  stroke-width: 2px;
+  stroke: red;
+}
+
 .node-song1-source,
 .node-song1-target { /* links when node is hovered over */
    font-weight: 700;
