--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,13 +3,14 @@
 
     <h1>Hamilton Data</h1>
 
+<div id="chart"></div>
+<div id="info-box"></div>
+
 <script src='https://code.jquery.com/jquery.js'></script>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="static/js/BundleChart.js"></script>
 
-<div id="info-box"></div>
-
-{% if g.jasmine_tests %}
+<!-- {% if g.jasmine_tests %}
     <!-- stuff for testing -->
     <link rel="stylesheet" href="/static/css/jasmine.min.css">
     <script src="/static/js/jasmine.min.js"></script>
@@ -17,6 +18,6 @@
     <script src="/static/js/boot.min.js"></script>
     <script src="/static/js/BundleChartSpec.js"></script>
     <!-- end of stuff for testing -->
-{% endif %}
+{% endif %} -->
 
 {% endblock %}
