updated bar chart to search for both capital and lowercase

--- a/templates/search_lyrics.html
+++ b/templates/search_lyrics.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <h1>Hamilton Data</h1>
+    <h3>"Alexander Hamilton"</h3>
 
 <div id='chart'></div>
 <div id="info-box">
