--- a/templates/base.html
+++ b/templates/base.html
@@ -11,15 +11,30 @@
 </head>
 
 <body>
-  Totally a Navbar
+   <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/">Song Connections</a></li>
+              <li><a href="/2">Search Lyrics</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
 
-  <br>
-  {% for message in get_flashed_messages() %}
-    {{ message }}
-  {% endfor %}
-  <hr>
 
   {% block content %} put your content here {% endblock %}
 
+<script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
