--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,10 +2,10 @@
 {% block content %}
 
     <h1>Hamilton Data</h1>
-
-<div id="chart"></div>
-<div id="info-box"></div>
-
+<div class="row-fluid">
+    <div id="chart" class="container-fluid span6"></div>
+    <div id="info-box" class="container-fluid span6"></div>
+</div>
 <script src='https://code.jquery.com/jquery.js'></script>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="static/js/BundleChart.js"></script>
