--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1>Hamilton Data</h1>
+    <h3>Song Comparisons</h3>
 <div class="row-fluid">
-    <div id="chart" class="container-fluid span6"></div>
-    <div id="info-box" class="container-fluid span6"></div>
+    <div id="chart" class="chart-bundle"></div>
+    <div id="info-box" class="info-bundle"></div>
 </div>
 <script src='https://code.jquery.com/jquery.js'></script>
 <script src="//d3js.org/d3.v3.min.js"></script>
