--- a/templates/search_lyrics.html
+++ b/templates/search_lyrics.html
@@ -4,21 +4,21 @@
 {% block content %}
 
     <h3>"Alexander Hamilton"</h3>
+<div class="row-fluid">
+    <div id='chart' class="chart-bundle"></div>
+    <div id="info-box" class="info-bar">
+        <div class="container">
+            <form id='searchbox'><label>
+                Search for lyrics: 
+                <input type="text" name="search" value="satisfied"></label>
+                <input type="submit" id="mybutton" value="Search"><br>
+            </form>
+        </div>
+        <div class="container" id="results">
 
-<div id='chart'></div>
-<div id="info-box">
-    <div class="container">
-        <form id='searchbox'><label>
-            Search for lyrics: 
-            <input type="text" name="search" value="satisfied"></label>
-            <input type="submit" id="mybutton" value="Search"><br>
-        </form>
-    </div>
-    <div class="container" id="results">
-
+        </div>
     </div>
 </div>
-
 <script src="/static/js/jquery-1.12.4.js"></script>
 <script src="/static/js/d3.v3.min.js"></script>
 <script src="/static/js/BarChart.js"></script>
