implemented one-page app; need to delete no longer useful files

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/">Song Connections</a></li>
-              <li><a href="/2">Search Lyrics</a></li>
+              <li class="active" id="li-connections"><a class="active" id="song-connections">Song Connections</a></li>
+              <li id="li-lyrics"><a id="search-lyrics">Search Lyrics</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
