--- a/templates/search_lyrics.html
+++ b/templates/search_lyrics.html
@@ -10,7 +10,7 @@
         <div class="container">
             <form id='searchbox'><label>
                 Search for lyrics: 
-                <input type="text" name="search" value="satisfied"></label>
+                <input type="text" name="search" value="look around"></label>
                 <input type="submit" id="mybutton" value="Search"><br>
             </form>
         </div>
