--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html>
 <head>
+
   <title>Hamildata</title>
+
   <link rel="shortcut icon" href="static/img/favicon.ico">
-  <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="static/css/bundle_chart.css">
   <link rel="stylesheet" type="text/css" href="static/css/bar_chart.css">
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
+
 </head>
 
 <body>
@@ -21,12 +27,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Hamilton Data</a>
+            <a class="navbar-brand" >Hamilton Data</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active" id="li-connections"><a class="active" id="song-connections">Song Connections</a></li>
-              <li id="li-lyrics"><a id="search-lyrics">Search Lyrics</a></li>
+              <li class="active" id="li-connections"><a href="#" class="active" id="song-connections">Song Connections</a></li>
+              <li id="li-lyrics"><a id="search-lyrics" href="#search">Search Lyrics</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
