--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h3>Song Comparisons</h3>
+   
     <div class="row-fluid">
-        <div id="chart" class="chart-bundle"></div>
-        <div id="info-box" class="info-bundle"></div>
+        <h3></h3>
+        <div id="chart"></div>
+        <div id="info-box"></div>
     </div>
 
     <script src='https://code.jquery.com/jquery.js'></script>
