refactored javascript files

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
             <ul class="nav navbar-nav">
               <li class="active" id="li-connections"><a href="#" class="active" id="song-connections">Song Connections</a></li>
               <li id="li-lyrics"><a id="search-lyrics" href="#search">Search Lyrics</a></li>
+              <li id="li-about"><a id="about-site" href="#about">About</a>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
