--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
    
     <div class="row-fluid">
         <h3></h3>
+        <div id="about"></div>
         <div id="chart"></div>
         <div id="info-box"></div>
     </div>
@@ -11,6 +12,9 @@
     <script src='https://code.jquery.com/jquery.js'></script>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="static/js/BundleChart.js"></script>
+    <script src="/static/js/BarChart.js"></script>
+    <script src="/static/js/About.js"></script>
+    <script src="/static/js/Main.js"></script>
 
     {% if g.jasmine_tests %}
         <!-- stuff for testing -->
