--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,11 +42,9 @@
     padding: 10px;
     position: relative;
     color: #444;
+    font-size: 14px;
 }
 
-p {
-    font-size: 1.5em;
-}
 
 /*Chart Div*/
 #chart {
